--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,3 +5,317 @@
 .btn {
     @apply bg-white text-neutral-800 border border-neutral-200 px-2.5 py-0.5 h-fit hover:bg-neutral-50 rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500;
 }
+
+.AvatarRoot {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	vertical-align: middle;
+	overflow: hidden;
+	user-select: none;
+	width: 45px;
+	height: 45px;
+	border-radius: 100%;
+	background-color: #e0e0e0;
+}
+
+.AvatarImage {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: inherit;
+}
+
+.AvatarFallback {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #f0f0f0;
+	color: hotpink;
+	font-size: 15px;
+	line-height: 1;
+	font-weight: 500;
+}
+
+/* reset */
+a {
+	all: unset;
+}
+
+.HoverCardContent {
+	border-radius: 6px;
+	padding: 20px;
+	width: 300px;
+	background-color: white;
+	box-shadow:
+		hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+		hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+	animation-duration: 400ms;
+	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+	will-change: transform, opacity;
+}
+.HoverCardContent[data-side="top"] {
+	animation-name: slideDownAndFade;
+}
+.HoverCardContent[data-side="right"] {
+	animation-name: slideLeftAndFade;
+}
+.HoverCardContent[data-side="bottom"] {
+	animation-name: slideUpAndFade;
+}
+.HoverCardContent[data-side="left"] {
+	animation-name: slideRightAndFade;
+}
+
+.HoverCardArrow {
+	fill: white;
+}
+
+.ImageTrigger {
+	cursor: pointer;
+	border-radius: 100%;
+	display: inline-block;
+}
+.ImageTrigger:focus {
+	box-shadow: 0 0 0 2px white;
+}
+
+.Image {
+	display: block;
+	border-radius: 100%;
+}
+.Image.normal {
+	width: 45px;
+	height: 45px;
+}
+.Image.large {
+	width: 60px;
+	height: 60px;
+}
+
+.Text {
+	margin: 0;
+	color: #1A1523;
+	font-size: 15px;
+	line-height: 1.5;
+}
+.Text.faded {
+	color: #6C6576;
+}
+.Text.bold {
+	font-weight: 500;
+}
+
+@keyframes slideUpAndFade {
+	0% {
+		opacity: 0;
+		transform: translateY(2px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes slideRightAndFade {
+	0% {
+		opacity: 0;
+		transform: translateX(-2px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes slideDownAndFade {
+	0% {
+		opacity: 0;
+		transform: translateY(-2px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes slideLeftAndFade {
+	0% {
+		opacity: 0;
+		transform: translateX(2px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+
+.DropdownMenuContent,
+.DropdownMenuSubContent {
+	min-width: 220px;
+	background-color: white;
+	border-radius: 6px;
+	padding: 5px;
+	box-shadow:
+		0px 10px 38px -10px rgba(22, 23, 24, 0.35),
+		0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+	animation-duration: 400ms;
+	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+	will-change: transform, opacity;
+}
+.DropdownMenuContent[data-side="top"],
+.DropdownMenuSubContent[data-side="top"] {
+	animation-name: slideDownAndFade;
+}
+.DropdownMenuContent[data-side="right"],
+.DropdownMenuSubContent[data-side="right"] {
+	animation-name: slideLeftAndFade;
+}
+.DropdownMenuContent[data-side="bottom"],
+.DropdownMenuSubContent[data-side="bottom"] {
+	animation-name: slideUpAndFade;
+}
+.DropdownMenuContent[data-side="left"],
+.DropdownMenuSubContent[data-side="left"] {
+	animation-name: slideRightAndFade;
+}
+
+.DropdownMenuItem,
+.DropdownMenuCheckboxItem,
+.DropdownMenuRadioItem,
+.DropdownMenuSubTrigger {
+	font-size: 13px;
+	line-height: 1;
+	color: #53526A;
+	border-radius: 3px;
+	display: flex;
+	align-items: center;
+	height: 25px;
+	padding: 0 5px;
+	position: relative;
+	padding-left: 25px;
+	user-select: none;
+	outline: none;
+}
+.DropdownMenuSubTrigger[data-state="open"] {
+	background-color: #E4E2EE;
+	color: #53526A;
+}
+.DropdownMenuItem[data-disabled],
+.DropdownMenuCheckboxItem[data-disabled],
+.DropdownMenuRadioItem[data-disabled],
+.DropdownMenuSubTrigger[data-disabled] {
+	color: #8E8C99;
+	pointer-events: none;
+}
+.DropdownMenuItem[data-highlighted],
+.DropdownMenuCheckboxItem[data-highlighted],
+.DropdownMenuRadioItem[data-highlighted],
+.DropdownMenuSubTrigger[data-highlighted] {
+	background-color: #6E56CF;
+	color: #FFFFFF;
+}
+
+.DropdownMenuLabel {
+	padding-left: 25px;
+	font-size: 12px;
+	line-height: 25px;
+	color: #2A2828;
+}
+
+.DropdownMenuSeparator {
+	height: 1px;
+	background-color: #D7D4E9;
+	margin: 5px;
+}
+
+.DropdownMenuItemIndicator {
+	position: absolute;
+	left: 0;
+	width: 25px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.DropdownMenuArrow {
+	fill: white;
+}
+
+.IconButton {
+	font-family: inherit;
+	border-radius: 100%;
+	height: 35px;
+	width: 35px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	color: #53526A;
+	background-color: white;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
+}
+.IconButton:hover {
+	background-color: #F3F0FF;
+}
+.IconButton:focus {
+	box-shadow: 0 0 0 2px black;
+}
+
+.RightSlot {
+	margin-left: auto;
+	padding-left: 20px;
+	color: #2A2828;
+}
+[data-highlighted] > .RightSlot {
+	color: white;
+}
+[data-disabled] .RightSlot {
+	color: #8E8C99;
+}
+
+@keyframes slideUpAndFade {
+	from {
+		opacity: 0;
+		transform: translateY(2px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes slideRightAndFade {
+	from {
+		opacity: 0;
+		transform: translateX(-2px);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes slideDownAndFade {
+	from {
+		opacity: 0;
+		transform: translateY(-2px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes slideLeftAndFade {
+	from {
+		opacity: 0;
+		transform: translateX(2px);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
