--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,6 +7,18 @@
 	@apply disabled:bg-neutral-100 disabled:text-neutral-400 disabled:border-neutral-200 disabled:hover:bg-neutral-100 disabled:cursor-not-allowed;
 }
 
+.card {
+	@apply border border-solid border-neutral-200 rounded-md;
+	/* @apply w-full gap-4 border border-t-4 shadow-sm rounded-md pt-4; */
+}
+.card:not(.no-padding) {
+	@apply p-4;
+}
+
+.input {
+	@apply border rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500 px-2 py-1;
+}
+
 .h1 {
 	@apply text-2xl font-semibold;
 }
