--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,6 +6,10 @@
     @apply bg-white text-neutral-800 border border-solid border-neutral-200 px-3 py-1 h-fit hover:cursor-pointer hover:bg-neutral-50 rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500;
 	@apply disabled:bg-neutral-100 disabled:text-neutral-400 disabled:border-neutral-200 disabled:hover:bg-neutral-100 disabled:cursor-not-allowed;
 }
+.btn-delete {
+	@apply bg-red-500 text-white hover:bg-red-600 border-red-400 hover:border-red-500;
+	@apply disabled:bg-red-300 disabled:text-red-500 disabled:border-red-300 disabled:hover:bg-red-300 disabled:hover:border-red-300 disabled:cursor-not-allowed;
+}
 
 .card {
 	@apply border border-solid border-neutral-200 rounded-md;
