--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,288 +2,310 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 47.4% 11.2%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 47.4% 11.2%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 47.4% 11.2%;
+        --primary: 222.2 47.4% 11.2%;
+        --primary-foreground: 210 40% 98%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
+        --destructive: 0 100% 50%;
+        --destructive-foreground: 210 40% 98%;
+        --ring: 215 20.2% 65.1%;
+        --radius: 0.5rem;
+    }
+}
+
 .btn {
     @apply bg-white text-neutral-800 border border-solid border-neutral-200 px-3 py-1 h-fit hover:cursor-pointer hover:bg-neutral-50 rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500;
-	@apply disabled:bg-neutral-100 disabled:text-neutral-400 disabled:border-neutral-200 disabled:hover:bg-neutral-100 disabled:cursor-not-allowed;
+    @apply disabled:bg-neutral-100 disabled:text-neutral-400 disabled:border-neutral-200 disabled:hover:bg-neutral-100 disabled:cursor-not-allowed;
 }
 .btn-delete {
-	@apply bg-red-500 text-white hover:bg-red-600 border-red-400 hover:border-red-500;
-	@apply disabled:bg-red-300 disabled:text-red-500 disabled:border-red-300 disabled:hover:bg-red-300 disabled:hover:border-red-300 disabled:cursor-not-allowed;
+    @apply bg-red-500 text-white hover:bg-red-600 border-red-400 hover:border-red-500;
+    @apply disabled:bg-red-300 disabled:text-red-500 disabled:border-red-300 disabled:hover:bg-red-300 disabled:hover:border-red-300 disabled:cursor-not-allowed;
 }
 
 .btn-primary {
-	@apply bg-blue-500 text-white hover:bg-blue-600 border-blue-400 hover:border-blue-500;
-	@apply disabled:bg-blue-300 disabled:text-blue-500 disabled:border-blue-300 disabled:hover:bg-blue-300 disabled:hover:border-blue-300 disabled:cursor-not-allowed;
+    @apply bg-blue-500 text-white hover:bg-blue-600 border-blue-400 hover:border-blue-500;
+    @apply disabled:bg-blue-300 disabled:text-blue-500 disabled:border-blue-300 disabled:hover:bg-blue-300 disabled:hover:border-blue-300 disabled:cursor-not-allowed;
 }
 
 .card {
-	@apply border border-solid border-neutral-200 rounded-md;
-	/* @apply w-full gap-4 border border-t-4 shadow-sm rounded-md pt-4; */
+    @apply border border-solid border-neutral-200 rounded-md;
+    /* @apply w-full gap-4 border border-t-4 shadow-sm rounded-md pt-4; */
 }
 .card:not(.no-padding) {
-	@apply p-4;
+    @apply p-4;
 }
 
 .input {
-	@apply border rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500 px-2 py-1;
+    @apply border rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500 px-2 py-1;
 }
 
 .h1 {
-	@apply text-2xl font-semibold;
+    @apply text-2xl font-semibold;
 }
 
 /* reset */
 a {
-	all: unset;
+    all: unset;
 }
 
 .HoverCardContent {
-	border-radius: 6px;
-	padding: 20px;
-	width: 300px;
-	background-color: white;
-	box-shadow:
-		hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
-		hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
-	animation-duration: 400ms;
-	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-	will-change: transform, opacity;
+    border-radius: 6px;
+    padding: 20px;
+    width: 300px;
+    background-color: white;
+    box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+        hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+    animation-duration: 400ms;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    will-change: transform, opacity;
 }
-.HoverCardContent[data-side="top"] {
-	animation-name: slideDownAndFade;
+.HoverCardContent[data-side='top'] {
+    animation-name: slideDownAndFade;
 }
-.HoverCardContent[data-side="right"] {
-	animation-name: slideLeftAndFade;
+.HoverCardContent[data-side='right'] {
+    animation-name: slideLeftAndFade;
 }
-.HoverCardContent[data-side="bottom"] {
-	animation-name: slideUpAndFade;
+.HoverCardContent[data-side='bottom'] {
+    animation-name: slideUpAndFade;
 }
-.HoverCardContent[data-side="left"] {
-	animation-name: slideRightAndFade;
+.HoverCardContent[data-side='left'] {
+    animation-name: slideRightAndFade;
 }
 
 .HoverCardArrow {
-	fill: white;
+    fill: white;
 }
 
 .ImageTrigger {
-	cursor: pointer;
-	border-radius: 100%;
-	display: inline-block;
+    cursor: pointer;
+    border-radius: 100%;
+    display: inline-block;
 }
 .ImageTrigger:focus {
-	box-shadow: 0 0 0 2px white;
+    box-shadow: 0 0 0 2px white;
 }
 
 .Image {
-	display: block;
-	border-radius: 100%;
+    display: block;
+    border-radius: 100%;
 }
 .Image.normal {
-	width: 45px;
-	height: 45px;
+    width: 45px;
+    height: 45px;
 }
 .Image.large {
-	width: 60px;
-	height: 60px;
+    width: 60px;
+    height: 60px;
 }
 
 .Text {
-	margin: 0;
-	color: #1A1523;
-	font-size: 15px;
-	line-height: 1.5;
+    margin: 0;
+    color: #1a1523;
+    font-size: 15px;
+    line-height: 1.5;
 }
 .Text.faded {
-	color: #6C6576;
+    color: #6c6576;
 }
 .Text.bold {
-	font-weight: 500;
+    font-weight: 500;
 }
 
 @keyframes slideUpAndFade {
-	0% {
-		opacity: 0;
-		transform: translateY(2px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
+    0% {
+        opacity: 0;
+        transform: translateY(2px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes slideRightAndFade {
-	0% {
-		opacity: 0;
-		transform: translateX(-2px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
+    0% {
+        opacity: 0;
+        transform: translateX(-2px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 @keyframes slideDownAndFade {
-	0% {
-		opacity: 0;
-		transform: translateY(-2px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
+    0% {
+        opacity: 0;
+        transform: translateY(-2px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes slideLeftAndFade {
-	0% {
-		opacity: 0;
-		transform: translateX(2px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
+    0% {
+        opacity: 0;
+        transform: translateX(2px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
-
 
 .DropdownMenuContent,
 .DropdownMenuSubContent {
-	min-width: 220px;
-	background-color: white;
-	border-radius: 6px;
-	padding: 5px;
-	box-shadow:
-		0px 10px 38px -10px rgba(22, 23, 24, 0.35),
-		0px 10px 20px -15px rgba(22, 23, 24, 0.2);
-	animation-duration: 400ms;
-	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-	will-change: transform, opacity;
+    min-width: 220px;
+    background-color: white;
+    border-radius: 6px;
+    padding: 5px;
+    box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35),
+        0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+    animation-duration: 400ms;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    will-change: transform, opacity;
 }
-.DropdownMenuContent[data-side="top"],
-.DropdownMenuSubContent[data-side="top"] {
-	animation-name: slideDownAndFade;
+.DropdownMenuContent[data-side='top'],
+.DropdownMenuSubContent[data-side='top'] {
+    animation-name: slideDownAndFade;
 }
-.DropdownMenuContent[data-side="right"],
-.DropdownMenuSubContent[data-side="right"] {
-	animation-name: slideLeftAndFade;
+.DropdownMenuContent[data-side='right'],
+.DropdownMenuSubContent[data-side='right'] {
+    animation-name: slideLeftAndFade;
 }
-.DropdownMenuContent[data-side="bottom"],
-.DropdownMenuSubContent[data-side="bottom"] {
-	animation-name: slideUpAndFade;
+.DropdownMenuContent[data-side='bottom'],
+.DropdownMenuSubContent[data-side='bottom'] {
+    animation-name: slideUpAndFade;
 }
-.DropdownMenuContent[data-side="left"],
-.DropdownMenuSubContent[data-side="left"] {
-	animation-name: slideRightAndFade;
+.DropdownMenuContent[data-side='left'],
+.DropdownMenuSubContent[data-side='left'] {
+    animation-name: slideRightAndFade;
 }
 
 .DropdownMenuItem,
 .DropdownMenuCheckboxItem,
 .DropdownMenuRadioItem,
 .DropdownMenuSubTrigger {
-	font-size: 13px;
-	line-height: 1;
-	color: #53526A;
-	border-radius: 3px;
-	display: flex;
-	align-items: center;
-	height: 25px;
-	padding: 0 5px;
-	position: relative;
-	padding-left: 25px;
-	user-select: none;
-	outline: none;
+    font-size: 13px;
+    line-height: 1;
+    color: #53526a;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    height: 25px;
+    padding: 0 5px;
+    position: relative;
+    padding-left: 25px;
+    user-select: none;
+    outline: none;
 }
-.DropdownMenuSubTrigger[data-state="open"] {
-	background-color: #E4E2EE;
-	color: #53526A;
+.DropdownMenuSubTrigger[data-state='open'] {
+    background-color: #e4e2ee;
+    color: #53526a;
 }
 .DropdownMenuItem[data-disabled],
 .DropdownMenuCheckboxItem[data-disabled],
 .DropdownMenuRadioItem[data-disabled],
 .DropdownMenuSubTrigger[data-disabled] {
-	color: #8E8C99;
-	pointer-events: none;
+    color: #8e8c99;
+    pointer-events: none;
 }
 .DropdownMenuItem[data-highlighted],
 .DropdownMenuCheckboxItem[data-highlighted],
 .DropdownMenuRadioItem[data-highlighted],
 .DropdownMenuSubTrigger[data-highlighted] {
-	background-color: #6E56CF;
-	color: #FFFFFF;
+    background-color: #6e56cf;
+    color: #ffffff;
 }
 
 .DropdownMenuLabel {
-	padding-left: 25px;
-	font-size: 12px;
-	line-height: 25px;
-	color: #2A2828;
+    padding-left: 25px;
+    font-size: 12px;
+    line-height: 25px;
+    color: #2a2828;
 }
 
 .DropdownMenuSeparator {
-	height: 1px;
-	background-color: #D7D4E9;
-	margin: 5px;
+    height: 1px;
+    background-color: #d7d4e9;
+    margin: 5px;
 }
 
 .DropdownMenuItemIndicator {
-	position: absolute;
-	left: 0;
-	width: 25px;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
+    position: absolute;
+    left: 0;
+    width: 25px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .DropdownMenuArrow {
-	fill: white;
+    fill: white;
 }
 
 .IconButton {
-	font-family: inherit;
-	border-radius: 100%;
-	height: 35px;
-	width: 35px;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	color: #53526A;
-	background-color: white;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
+    font-family: inherit;
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #53526a;
+    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
 }
 .IconButton:hover {
-	background-color: #F3F0FF;
+    background-color: #f3f0ff;
 }
 .IconButton:focus {
-	box-shadow: 0 0 0 2px black;
+    box-shadow: 0 0 0 2px black;
 }
 
 .RightSlot {
-	margin-left: auto;
-	padding-left: 20px;
-	color: #2A2828;
+    margin-left: auto;
+    padding-left: 20px;
+    color: #2a2828;
 }
 [data-highlighted] > .RightSlot {
-	color: white;
+    color: white;
 }
 [data-disabled] .RightSlot {
-	color: #8E8C99;
+    color: #8e8c99;
 }
 
 .LabelRoot {
-	font-size: 15px;
-	font-weight: 500;
-	line-height: 35px;
-	color: black;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 35px;
+    color: black;
 }
 
 .Input {
-	width: 200px;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	padding: 0 10px;
-	height: 35px;
-	font-size: 15px;
-	line-height: 1;
-	@apply border rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500;
+    width: 200px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px;
+    height: 35px;
+    font-size: 15px;
+    line-height: 1;
+    @apply border rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500;
 }
