Introduce default pending route component

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -27,6 +27,10 @@
     }
 }
 
+#root {
+    @apply min-h-screen flex flex-col;
+}
+
 .btn {
     @apply bg-white text-neutral-800 border border-solid border-neutral-200 px-3 py-1 h-fit hover:cursor-pointer hover:bg-neutral-50 rounded-md focus:outline focus:outline-2 outline-offset-2 outline-blue-500;
     @apply disabled:bg-neutral-100 disabled:text-neutral-400 disabled:border-neutral-200 disabled:hover:bg-neutral-100 disabled:cursor-not-allowed;
