--- a/web/src/index.css
+++ b/web/src/index.css
@@ -87,6 +87,10 @@
     @apply text-xl font-semibold px-2 py-1.5;
 }
 
+.h3 {
+    @apply text-base font-semibold px-2 py-1.5;
+}
+
 /* reset */
 a {
     all: unset;
