--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -28,6 +28,20 @@
         --ring: 215 20.2% 65.1%;
         --radius: 0.5rem;
     }
+
+    @media (prefers-color-scheme: dark) {
+        :root {
+            --background: 222.2 47.4% 11.2%;
+            --foreground: 210 40% 98%;
+            --card: 222.2 47.4% 11.2%;
+            --card-foreground: 210 40% 98%;
+            --border: 214.3 31.8% 15.3%;
+        }
+    }
+}
+
+html, body {
+    @apply bg-background text-foreground;
 }
 
 #root {
@@ -49,7 +63,7 @@
 }
 
 .card {
-    @apply border border-solid border-neutral-200 rounded-md;
+    @apply border border-solid rounded-md;
     /* @apply w-full gap-4 border border-t-4 shadow-sm rounded-md pt-4; */
 }
 .card:not(.no-padding) {
