--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -33,6 +33,7 @@
         :root {
             --background: 240 8% 7%;
             --background-secondary: 240 5% 15%;
+            --muted: 240 5% 15%;
             --foreground: 0 0% 90%;
             --primary: 210 40% 98%;
             --primary-foreground: 210 40% 98%;
@@ -40,7 +41,7 @@
             --border: 240 5% 15%;
             --accent: 240 2% 15%;
             --popover: 240 8% 7%;
-            --popover-foreground: 210 40% 98%;
+            --popover-foreground: 210 40% 9
         }
     }
 }
@@ -155,7 +156,7 @@ a {
 
 .Text {
     margin: 0;
-    color: #1a1523;
+    color: hsl(var(--foreground));
     font-size: 15px;
 }
 .Text.faded {
