--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -8,6 +8,7 @@
 @layer base {
     :root {
         --background: 0 0% 100%;
+        --background-secondary: 0 0% 95%;
         --foreground: 222.2 47.4% 11.2%;
         --muted: 210 40% 96.1%;
         --muted-foreground: 215.4 16.3% 46.9%;
@@ -28,15 +29,37 @@
         --ring: 215 20.2% 65.1%;
         --radius: 0.5rem;
     }
+}
 
-    @media (prefers-color-scheme: dark) {
-        :root {
-            --background: 240 8% 7%;
-            --background-secondary: 240 5% 15%;
-            --foreground: 240 9% 75%;
-            --border: 240 5% 15%;
-        }
+
+@media (prefers-color-scheme: dark) {
+    html:not(.light) {
+        --background: 240 8% 7%;
+        --background-secondary: 240 5% 15%;
+        --muted: 240 5% 15%;
+        --foreground: 0 0% 90%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 210 40% 98%;
+        --accent-foreground: 210 40% 98%;
+        --border: 240 5% 15%;
+        --accent: 240 2% 15%;
+        --popover: 240 8% 7%;
+        --popover-foreground: 210 40% 9
     }
+}
+
+html.dark {
+    --background: 240 8% 7%;
+    --background-secondary: 240 5% 15%;
+    --muted: 240 5% 15%;
+    --foreground: 0 0% 90%;
+    --primary: 210 40% 98%;
+    --primary-foreground: 210 40% 98%;
+    --accent-foreground: 210 40% 98%;
+    --border: 240 5% 15%;
+    --accent: 240 2% 15%;
+    --popover: 240 8% 7%;
+    --popover-foreground: 210 40% 9
 }
 
 html, body {
@@ -101,7 +124,7 @@ a {
     border-radius: 6px;
     padding: 20px;
     width: 300px;
-    background-color: white;
+    background-color: hsl(var(--background-secondary));
     box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
         hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
     animation-duration: 400ms;
@@ -122,7 +145,7 @@ a {
 }
 
 .HoverCardArrow {
-    fill: white;
+    fill: hsl(var(--background-secondary));
 }
 
 .ImageTrigger {
@@ -147,11 +170,6 @@ a {
     height: 60px;
 }
 
-.Text {
-    margin: 0;
-    color: #1a1523;
-    font-size: 15px;
-}
 .Text.faded {
     color: #6c6576;
 }
@@ -207,8 +225,8 @@ a {
     outline: none;
 }
 .DropdownMenuSubTrigger[data-state='open'] {
-    background-color: #e4e2ee;
-    color: #53526a;
+    background-color: hsl(var(--background-secondary));
+    color: hsl(var(--foreground));
 }
 .DropdownMenuItem[data-disabled],
 .DropdownMenuCheckboxItem[data-disabled],
@@ -259,7 +277,7 @@ a {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    color: #53526a;
+    color: hsl(var(--foreground));
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
 }
